crates/datafusion-optimizer-rules/src/physical_plan/flightsql/snapshots/datafusion_optimizer_rules__physical_plan__flightsql__aggregate_pushdown__tests__result_avg_does_not_average_averages_optimized_plan.snap
---
source: crates/datafusion-optimizer-rules/src/physical_plan/flightsql/aggregate_pushdown.rs
expression: plan_display(&optimized)
---
AggregateExec: mode=Final, gby=[], aggr=[avg(l_quantity)]
  CoalescePartitionsExec
    UnionExec
      PartialAggregationFlightSqlExec sql=SELECT COUNT("l_quantity") AS "__agg_0", SUM("l_quantity") AS "__agg_1" FROM foo.foo.lineitem
      PartialAggregationFlightSqlExec sql=SELECT COUNT("l_quantity") AS "__agg_0", SUM("l_quantity") AS "__agg_1" FROM foo.foo.lineitem
